--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="app_name">Rural Workers</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="AD_APPLICATION_ID">ca-app-pub-6180588710018827~6066868177</string>
+    <string name="banner_ad_unit_id">ca-app-pub-6180588710018827/8354738713</string>
+
+    <string name="login_phone_no">Mobile No *(தொலைபேசி எண்)</string>
+    <string name="login_name">Name *(பெயர்)</string>
+    <string name="login_email_id">Email ID *(மின்னஞ்சல்)</string>
+
+
 </resources>
